# zhac-net-core

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  ONBOARDING.md  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.prod.defaults
components/hap_master/: CMakeLists.txt  README.md  hap_master.cpp
components/hap_master/include/: hap_master.h
components/mqtt/: CMakeLists.txt  LICENSE  README.md
components/rainmaker_gw/: CMakeLists.txt  Kconfig  rainmaker_gw.c  rmk_bridge.c  rmk_store.c  rmk_typemap.c
components/rainmaker_gw/include/: rainmaker_gw.h  rmk_bridge.h  rmk_store.h  rmk_typemap.h
components/remote_client/: CMakeLists.txt  idf_component.yml  remote_allow.cpp  remote_backoff.cpp  remote_client.cpp  remote_nvs.cpp  remote_state.cpp
components/remote_client/include/: remote_allow.h  remote_backoff.h  remote_client.h  remote_nvs.h  remote_nvs_kv.h  remote_state.h
components/remote_client/test/: CMakeLists.txt  remote_allow_test.cpp  remote_backoff_test.cpp  remote_nvs_stub.cpp  remote_nvs_test.cpp  remote_state_test.cpp
components/ws_server/: CMakeLists.txt  README.md  ws_server.cpp
components/ws_server/include/: ws_server.h
main/: CMakeLists.txt  Kconfig.projbuild  api_devices.cpp  api_groups.cpp  api_handlers.h  api_rainmaker.cpp  api_remote.cpp  api_routes.def  api_rules.cpp  api_scripts.cpp  api_system.cpp  dgm_store.cpp  dgm_store.h  groups_store.cpp  groups_store.h  hap_bridge.cpp  idf_component.yml  json_buf.h  log_ring.cpp  log_ring.h  main.cpp  metrics_mqtt.cpp  nvs_helpers.h  rest_devices.cpp  rest_ops.cpp  rest_rules.cpp  s3_internal.h  wifi_mgr.cpp  wifi_mgr.h  ws_bridge.cpp
test/host/: CMakeLists.txt  test_dgm_store.cpp  test_json_safety.cpp  test_rmk_store.cpp  test_rmk_typemap.cpp
test/host/stubs/: esp_err.h  esp_log.h  nvs.h  nvs_flash.h
test/host/stubs/freertos/: FreeRTOS.h  semphr.h
